# armor_judge_cpp

./: .gitignore  CMakeLists.txt  COMMUNICATION.md  COMMUNICATION_SUMMARY.md  TRAJECTORY_FEATURES.md  USAGE.md  build.sh  demo.sh  package.xml  外参反投影.md
config/: cloud_integrated.yaml
include/: Detection.h  Inference.h  Visualization.h  YawController.h  armor_bbox_counter.hpp  cloud_refine.hpp  extrinsic_projection.hpp  mode_manager.hpp  node.hpp  pitch.h  point_cloud_refine_types.hpp  time_associator.hpp  yaw.h
launch/: cloud_integrated.launch.py
src/: Detection.cpp  Inference.cpp  Visualization.cpp  YawController.cpp  armor_bbox_counter.cpp  cloud_integrated_node.cpp  cloud_refine.cpp  extrinsic_projection.cpp  main.cpp  main_ros2.cpp  mode_manager.cpp  node.cpp  pitch.cpp  time_associator.cpp  yaw.cpp
